--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Services\Master\UserService.cs" />
     <Compile Include="Services\School\AddressService.cs" />
     <Compile Include="Services\School\AlphaGradeService.cs" />
+    <Compile Include="Services\School\AlternateScoreService.cs" />
     <Compile Include="Services\School\AnnouncementAttachmentService.cs" />
     <Compile Include="Services\School\AnnouncementQnAService.cs" />
     <Compile Include="Services\School\AnnouncementReminderService.cs" />
