--- a/Chalkable.Web/fakeData/appAnalytics.json
+++ b/Chalkable.Web/fakeData/appAnalytics.json
@@ -5,24 +5,39 @@
 		"appInstalls":{
 			"totalCount":1,
 			"stats":[
-				{"installCount":0, "summary":"Jan 1"},
-				{"installCount":10, "summary":"5"},
+				{"installCount":400, "summary":"Jan 1"},
+				{"installCount":1234, "summary":"5"},
 				{"installCount":500, "summary":"10"},
-				{"installCount":15, "summary":"15"},
-				{"installCount":0, "summary":"20"},
-				{"installCount":0, "summary":"25"},
-				{"installCount":0, "summary":"Jan 30"}
+				{"installCount":150, "summary":"15"},
+				{"installCount":400, "summary":"20"},
+				{"installCount":556, "summary":"25"},
+				{"installCount":277, "summary":"Jan 30"}
 			]
 		},
 		"appViews":{
 			"stats":[
-				{"viewsCount":0, "summary":"Jan 1"},
-				{"viewsCount":10, "summary":"5"},
-				{"viewsCount":21, "summary":"10"},
-				{"viewsCount":15, "summary":"15"},
-				{"viewsCount":1, "summary":"20"},
-				{"viewsCount":2, "summary":"25"},
-				{"viewsCount":3, "summary":"Jan 30"}
+
+				{"viewsCount":800, "summary":"Jan 1", "type": "teacher"},
+				{"viewsCount":300, "summary":"5", "type": "teacher"},
+				{"viewsCount":210, "summary":"10", "type": "teacher"},
+				{"viewsCount":150, "summary":"15", "type": "teacher"},
+				{"viewsCount":100, "summary":"20", "type": "teacher"},
+				{"viewsCount":200, "summary":"25", "type": "teacher"},
+				{"viewsCount":300, "summary":"Jan 30", "type": "student"},
+                {"viewsCount":100, "summary":"Jan 1", "type": "student"},
+                {"viewsCount":300, "summary":"5", "type": "student"},
+                {"viewsCount":500, "summary":"10", "type": "student"},
+                {"viewsCount":150, "summary":"15", "type": "student"},
+                {"viewsCount":100, "summary":"20", "type": "student"},
+                {"viewsCount":200, "summary":"25", "type": "student"},
+                {"viewsCount":600, "summary":"Jan 30", "type": "student"},
+                {"viewsCount":100, "summary":"Jan 1", "type": "admin"},
+                {"viewsCount":300, "summary":"5", "type": "admin"},
+                {"viewsCount":210, "summary":"10", "type": "admin"},
+                {"viewsCount":150, "summary":"15", "type": "admin"},
+                {"viewsCount":100, "summary":"20", "type": "admin"},
+                {"viewsCount":800, "summary":"25", "type": "admin"},
+                {"viewsCount":900, "summary":"Jan 30", "type": "admin"}
 			]
 		}
 }, "success":true}
