--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Models\AnnouncementsViewData\AnnouncementPeriodViewData.cs" />
     <Compile Include="Models\AnnouncementsViewData\AnnouncementsClassPeriodViewData.cs" />
     <Compile Include="Models\AnnouncementsViewData\AnnouncementShortViewData.cs" />
+    <Compile Include="Models\AnnouncementsViewData\AnnouncementStandardViewData.cs" />
     <Compile Include="Models\ClassAnnouncementTypeViewData.cs" />
     <Compile Include="Models\AnnouncementsViewData\AnnouncementViewData.cs" />
     <Compile Include="Models\ApplicationsViewData\AppsBudgetViewData.cs" />
