--- a/Chalkable.Data.School/Chalkable.Data.School.csproj
+++ b/Chalkable.Data.School/Chalkable.Data.School.csproj
@@ -77,6 +77,7 @@
     <Compile Include="DataAccess\ClassDisciplineDataAccess.cs" />
     <Compile Include="DataAccess\ClassDisciplineTypeDataAccess.cs" />
     <Compile Include="DataAccess\DisciplineTypeDataAccess.cs" />
+    <Compile Include="DataAccess\GradingPeriodDataAccess.cs" />
     <Compile Include="DataAccess\GradingStatisticDataAccess.cs" />
     <Compile Include="DataAccess\GradingStyleDataAccess.cs" />
     <Compile Include="DataAccess\NotificationDataAccess.cs" />
@@ -129,6 +130,7 @@
     <Compile Include="Model\Date.cs" />
     <Compile Include="Model\DisciplineType.cs" />
     <Compile Include="Model\GradeLevel.cs" />
+    <Compile Include="Model\GradingPeriod.cs" />
     <Compile Include="Model\GradingStatistic.cs" />
     <Compile Include="Model\GradingStyle.cs" />
     <Compile Include="Model\MarkingPeriod.cs" />
