--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Services\School\StandardService.cs" />
     <Compile Include="Services\School\StudentAnnouncementService.cs" />
     <Compile Include="Services\School\StudentParentService.cs" />
+    <Compile Include="Services\School\SyncService.cs" />
     <Compile Include="Services\StorageBlobService.cs" />
     <Compile Include="Services\UserContext.cs" />
     <Compile Include="Services\ServiceLocator.cs" />
