--- a/Chalkable.StiConnector/Chalkable.StiConnector.csproj
+++ b/Chalkable.StiConnector/Chalkable.StiConnector.csproj
@@ -86,13 +86,12 @@
     <Compile Include="Connectors\Model\ActivityStandard.cs" />
     <Compile Include="Connectors\Model\ClassroomOption.cs" />
     <Compile Include="Connectors\Model\Gradebook.cs" />
-    <Compile Include="Connectors\Model\School.cs" />
     <Compile Include="Connectors\Model\Score.cs" />
     <Compile Include="Connectors\Model\SectionAttendance.cs" />
     <Compile Include="Connectors\Model\StiAttachment.cs" />
     <Compile Include="Connectors\Model\StudentAverages.cs" />
+    <Compile Include="Connectors\Model\User.cs" />
     <Compile Include="Connectors\ReportConnector.cs" />
-    <Compile Include="Connectors\SchoolConnector.cs" />
     <Compile Include="Connectors\SectionStandardConnector.cs" />
     <Compile Include="Connectors\SyncConnector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -149,6 +148,7 @@
     <Compile Include="SyncModel\StudentSchedule.cs" />
     <Compile Include="SyncModel\StudentScheduleTerm.cs" />
     <Compile Include="SyncModel\StudentSchool.cs" />
+    <Compile Include="SyncModel\SyncContext.cs" />
     <Compile Include="SyncModel\Term.cs" />
     <Compile Include="SyncModel\TimeSlot.cs" />
     <Compile Include="SyncModel\User.cs" />
