--- a/Chalkable.StiImport/Chalkable.StiImport.csproj
+++ b/Chalkable.StiImport/Chalkable.StiImport.csproj
@@ -62,6 +62,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ImportService.cs" />
+    <Compile Include="Services\ImportService.delete.cs" />
+    <Compile Include="Services\ImportService.insert.cs" />
+    <Compile Include="Services\ImportService.update.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Chalkable.BusinessLogic\Chalkable.BusinessLogic.csproj">
