--- a/Chalkable.StiConnector/Chalkable.StiConnector.csproj
+++ b/Chalkable.StiConnector/Chalkable.StiConnector.csproj
@@ -88,11 +88,13 @@
     <Compile Include="Connectors\Model\Gradebook.cs" />
     <Compile Include="Connectors\Model\Score.cs" />
     <Compile Include="Connectors\Model\SectionAttendance.cs" />
+    <Compile Include="Connectors\Model\StandardScore.cs" />
     <Compile Include="Connectors\Model\StiAttachment.cs" />
     <Compile Include="Connectors\Model\StudentAverages.cs" />
     <Compile Include="Connectors\Model\User.cs" />
     <Compile Include="Connectors\ReportConnector.cs" />
     <Compile Include="Connectors\SectionStandardConnector.cs" />
+    <Compile Include="Connectors\StandardScoreConnector.cs" />
     <Compile Include="Connectors\SyncConnector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncModel\AbsenceLevelReason.cs" />
