--- a/Chalkable.BackgroundTaskProcessor/app.config
+++ b/Chalkable.BackgroundTaskProcessor/app.config
@@ -25,14 +25,14 @@
     </trace>
   </system.diagnostics>
   <connectionStrings>
-    <add name="ChalkableMaster" connectionString="Data Source=.\sqlexpress;Initial Catalog=ChalkableMaster;UID=sa;Pwd=mc_z631"/>
-    <add name="ChalkableSchoolTemplate" connectionString="Data Source=.\sqlexpress;Initial Catalog=ChalkableSchoolTemplate;UID=sa;Pwd=mc_z631"/>
+    <add name="ChalkableMaster" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
+    <add name="ChalkableSchoolTemplate" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />
   </connectionStrings>
-  <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate" SchoolDbUser="sa" SchoolDbPassword="mc_z631" EmptySchoolsReserved="10"
+  <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate" SchoolDbUser="chalkableadmin" SchoolDbPassword="Hellowebapps1!" EmptySchoolsReserved="10"
                           DemoSchoolsReserved="4">
     <Servers>
-      <add key="DbServer1" value=".\sqlexpress" />
+      <add key="DbServer1" value="me0buyg8np.database.windows.net" />
     </Servers>
   </ChalkableConfiguration>
 </configuration>
