--- a/Chalkable.StiConnector/Chalkable.StiConnector.csproj
+++ b/Chalkable.StiConnector/Chalkable.StiConnector.csproj
@@ -119,6 +119,7 @@
     <Compile Include="SyncModel\Ethnicity.cs" />
     <Compile Include="SyncModel\Gender.cs" />
     <Compile Include="SyncModel\GradeLevel.cs" />
+    <Compile Include="SyncModel\GradingPeriod.cs" />
     <Compile Include="SyncModel\OrganizationAddress.cs" />
     <Compile Include="SyncModel\Person.cs" />
     <Compile Include="SyncModel\PersonAddress.cs" />
