--- a/Chalkable.StiConnector/Chalkable.StiConnector.csproj
+++ b/Chalkable.StiConnector/Chalkable.StiConnector.csproj
@@ -87,12 +87,15 @@
     <Compile Include="Connectors\Model\ClassroomOption.cs" />
     <Compile Include="Connectors\Model\Gradebook.cs" />
     <Compile Include="Connectors\Model\Score.cs" />
+    <Compile Include="Connectors\Model\Seat.cs" />
+    <Compile Include="Connectors\Model\SeatingChart.cs" />
     <Compile Include="Connectors\Model\SectionAttendance.cs" />
     <Compile Include="Connectors\Model\StandardScore.cs" />
     <Compile Include="Connectors\Model\StiAttachment.cs" />
     <Compile Include="Connectors\Model\StudentAverages.cs" />
     <Compile Include="Connectors\Model\User.cs" />
     <Compile Include="Connectors\ReportConnector.cs" />
+    <Compile Include="Connectors\SeatingChartConnector.cs" />
     <Compile Include="Connectors\SectionStandardConnector.cs" />
     <Compile Include="Connectors\StandardScoreConnector.cs" />
     <Compile Include="Connectors\SyncConnector.cs" />
