--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Services\DemoSchool\Master\DemoApplicationService.cs" />
     <Compile Include="Services\DemoSchool\DemoNotificationService.cs" />
     <Compile Include="Services\DemoSchool\Storage\BaseDemoStorage.cs" />
+    <Compile Include="Services\DemoSchool\Storage\DemoDistrictStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoAnnonucementStandardStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoAnnonucementRecipientStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoAnnouncementReminderStorage.cs" />
