--- a/Chalkable.StiConnector/Chalkable.StiConnector.csproj
+++ b/Chalkable.StiConnector/Chalkable.StiConnector.csproj
@@ -138,6 +138,7 @@
     <Compile Include="SyncModel\SchoolGradeLevel.cs" />
     <Compile Include="SyncModel\SectionStaff.cs" />
     <Compile Include="SyncModel\SectionTerm.cs" />
+    <Compile Include="SyncModel\SpEdStatus.cs" />
     <Compile Include="SyncModel\Staff.cs" />
     <Compile Include="SyncModel\StaffClassification.cs" />
     <Compile Include="SyncModel\StaffContact.cs" />
