--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -131,6 +131,11 @@
     <Compile Include="Services\DemoSchool\Master\DemoApplicationService.cs" />
     <Compile Include="Services\DemoSchool\DemoNotificationService.cs" />
     <Compile Include="Services\DemoSchool\Storage\BaseDemoStorage.cs" />
+    <Compile Include="Services\DemoSchool\Storage\DemoApplicationInstallActionRoleStorage.cs" />
+    <Compile Include="Services\DemoSchool\Storage\DemoApplicationInstallActionDepartmentStorage.cs" />
+    <Compile Include="Services\DemoSchool\Storage\DemoApplicationInstallActionGradeLevelStorage.cs" />
+    <Compile Include="Services\DemoSchool\Storage\DemoApplicationInstallActionClassesStorage.cs" />
+    <Compile Include="Services\DemoSchool\Storage\DemoApplicationInstallActionStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoDistrictStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoAnnouncementStandardStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoAnnonucementRecipientStorage.cs" />
@@ -140,7 +145,6 @@
     <Compile Include="Services\DemoSchool\Storage\DemoApplicationInstallStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoNotificationStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoApplicationRatingStorage.cs" />
-    <Compile Include="Services\DemoSchool\Storage\DemoApplicationStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoAttendanceLevelReasonStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoAttendanceReasonStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoAnnouncementAttachmentStorage.cs" />
