--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Services\DemoSchool\Storage\DemoSchoolYearStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoPrivateMessageStorage.cs" />
     <Compile Include="Services\DemoSchool\DemoGradingStandardService.cs" />
+    <Compile Include="Services\DemoSchool\Storage\sti\DemoStiDisciplineStorage.cs" />
     <Compile Include="Services\Master\AccessControlService.cs" />
     <Compile Include="Services\Master\ApplicationService.cs" />
     <Compile Include="Services\Master\ApplicationUploadService.cs" />
