fixed demo attendance service

--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -187,6 +187,8 @@
     <Compile Include="Services\DemoSchool\Storage\DemoSchoolYearStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoPrivateMessageStorage.cs" />
     <Compile Include="Services\DemoSchool\DemoGradingStandardService.cs" />
+    <Compile Include="Services\DemoSchool\Storage\sti\StiSeatingChartStorage.cs" />
+    <Compile Include="Services\DemoSchool\Storage\sti\DemoStiAttendanceStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiGradeBookStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiStandardScoreStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiDisciplineStorage.cs" />
