--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Services\DemoSchool\Storage\DemoSchoolYearStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoPrivateMessageStorage.cs" />
     <Compile Include="Services\DemoSchool\DemoGradingStandardService.cs" />
+    <Compile Include="Services\DemoSchool\Storage\sti\DemoStiInfractionStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiActivityScoreStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\StiSeatingChartStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiAttendanceStorage.cs" />
