--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Services\DemoSchool\DemoNotificationService.cs" />
     <Compile Include="Services\DemoSchool\DemoStorageBlobService.cs" />
     <Compile Include="Services\DemoSchool\Storage\BaseDemoStorage.cs" />
+    <Compile Include="Services\DemoSchool\Storage\DemoBlobStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoAnnonucementRecipientDataStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoInfractionStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoAnnonucementApplicationStorage.cs" />
