--- a/Chalkable.StiConnector/Chalkable.StiConnector.csproj
+++ b/Chalkable.StiConnector/Chalkable.StiConnector.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Connectors\Model\ClassroomOption.cs" />
     <Compile Include="Connectors\Model\DisciplineReferral.cs" />
     <Compile Include="Connectors\Model\Gradebook.cs" />
+    <Compile Include="Connectors\Model\GradebookReportParams.cs" />
     <Compile Include="Connectors\Model\Score.cs" />
     <Compile Include="Connectors\Model\Seat.cs" />
     <Compile Include="Connectors\Model\SeatingChart.cs" />
@@ -97,6 +98,7 @@
     <Compile Include="Connectors\Model\StiAttachment.cs" />
     <Compile Include="Connectors\Model\StudentAverages.cs" />
     <Compile Include="Connectors\Model\User.cs" />
+    <Compile Include="Connectors\Model\WorksheetReportParams.cs" />
     <Compile Include="Connectors\ReportConnector.cs" />
     <Compile Include="Connectors\SeatingChartConnector.cs" />
     <Compile Include="Connectors\SectionStandardConnector.cs" />
