--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -476,6 +476,7 @@
     <Content Include="fakeData\seatingChart3.json" />
     <None Include="Web.qa.config">
       <SubType>Designer</SubType>
+      <DependentUpon>Web.config</DependentUpon>
     </None>
     <None Include="Web.staging.config">
       <DependentUpon>Web.config</DependentUpon>
