fixed demo announcement

--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Services\DemoSchool\Storage\DemoSchoolYearStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoPrivateMessageStorage.cs" />
     <Compile Include="Services\DemoSchool\DemoGradingStandardService.cs" />
+    <Compile Include="Services\DemoSchool\Storage\sti\DemoStiActivityStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiInfractionStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiActivityScoreStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\StiSeatingChartStorage.cs" />
