--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -191,12 +191,13 @@
     <Compile Include="Services\DemoSchool\Storage\DemoSchoolYearStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoPrivateMessageStorage.cs" />
     <Compile Include="Services\DemoSchool\DemoGradingStandardService.cs" />
+    <Compile Include="Services\DemoSchool\Storage\sti\DemoStiActivityStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiInfractionStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiActivityScoreStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\StiSeatingChartStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiAttendanceStorage.cs" />
+    <Compile Include="Services\DemoSchool\Storage\sti\DemoStiStandartScoreStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiGradeBookStorage.cs" />
-    <Compile Include="Services\DemoSchool\Storage\sti\DemoStiStandardScoreStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\sti\DemoStiDisciplineStorage.cs" />
     <Compile Include="Services\Master\AccessControlService.cs" />
     <Compile Include="Services\Master\ApplicationService.cs" />
