--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Services\DemoSchool\Storage\BaseDemoIntStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\BaseDemoGuidStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoClassRoomOptionSorage.cs" />
+    <Compile Include="Services\DemoSchool\Storage\DemoClassTeacherStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoGradingScaleRangeStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoGradingScaleStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoBlobStorage.cs" />
